test_regress/t/t_assign_automatic_bad.out
%Error: t/t_assign_automatic_bad.v:31:10: Automatic lifetime variable not allowed in continuous assignment (IEEE 1800-2023 6.21): 'bad_auto3'
                                        : ... note: In instance 't'
   31 |   assign bad_auto3 = 2;   
      |          ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_assign_automatic_bad.v:32:10: Dynamically-sized variable not allowed in continuous assignment (IEEE 1800-2023 6.21): 'bad_dyn5'
                                        : ... note: In instance 't'
   32 |   assign bad_dyn5 = empty_dyn;   
      |          ^~~~~~~~
%Error: t/t_assign_automatic_bad.v:33:12: Automatic lifetime variable not allowed in continuous assignment (IEEE 1800-2023 6.21): 'm_bad1'
                                        : ... note: In instance 't'
   33 |   assign c.m_bad1 = 2;   
      |            ^~~~~~
%Error: t/t_assign_automatic_bad.v:43:5: Automatic lifetime variable not allowed in nonblocking assignment (IEEE 1800-2023 6.21): 'bad_auto4'
                                       : ... note: In instance 't'
   43 |     bad_auto4 <= 2;   
      |     ^~~~~~~~~
%Error: t/t_assign_automatic_bad.v:44:5: Dynamically-sized variable not allowed in nonblocking assignment (IEEE 1800-2023 6.21): 'bad_dyn6'
                                       : ... note: In instance 't'
   44 |     bad_dyn6 <= empty_dyn;   
      |     ^~~~~~~~
%Error: t/t_assign_automatic_bad.v:46:7: Automatic lifetime variable not allowed in nonblocking assignment (IEEE 1800-2023 6.21): 'm_bad2'
                                       : ... note: In instance 't'
   46 |     c.m_bad2 <= 2;   
      |       ^~~~~~
%Error: Exiting due to
